@@ -1,3 +1,10 @@
+2015-03-18  Tristan Gingold  <gingold@adacore.com>
+
+        * amd64-windows-tdep.c (amd64_windows_find_unwind_info): Move
+        redirection code to ...
+        (amd64_windows_frame_decode_insns): ... Here.  Fix in prologue
+        checks.  Fix SAVE_NONVOL operations.  Add debug code and comments.
+
 2015-03-18  Gary Benson <gbenson@redhat.com>
 
 	(remote_protocol_features): Remove the "vFile:fstat" feature.
